--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -3,10 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activities.SendMessage"
     android:orientation="vertical">
     <ListView
@@ -16,18 +12,18 @@
         android:id="@+id/lstContacts"></ListView>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
         <EditText
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/etMessage"/>
+            android:id="@+id/etMessage"
+            android:maxHeight="250dp"/>
         <Button
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:text=">"
-            android:id="@+id/btnSend"/>
+            android:id="@+id/btnSend" />
     </LinearLayout>
 </LinearLayout>
