--- a/app/src/main/res/layout/activity_send_message.xml
+++ b/app/src/main/res/layout/activity_send_message.xml
@@ -19,7 +19,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/etMessage"
-            android:maxHeight="250dp"/>
+            android:maxHeight="250dp"
+            android:maxLength="160"/>
         <Button
             android:layout_width="50dp"
             android:layout_height="wrap_content"
